--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ canvas {
 body {
   background-color: black;
   margin: 0;
+  color: white;
 }
 
 h1 {
@@ -16,4 +17,28 @@ h1 {
 
 .hidden {
   display: none;
+}
+
+.container {
+  position: relative;
+}
+.container video {
+  position: relative;
+  z-index: 0;
+}
+.overlay {
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
+}
+
+.link {
+  color: white;
+  text-decoration: none;
+  background-color: red;
+  padding: 10px;
+  border-radius: 15px;
 }
