--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
 
 h1 {
   color: white;
+  font-size: 75px;
 }
 
 .hidden {
@@ -27,18 +28,41 @@ h1 {
   z-index: 0;
 }
 .overlay {
-  z-index: 1;
+  position: fixed;
+  bottom: 45%;
+
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  min-height: 100vh;
 }
 
 .link {
   color: white;
   text-decoration: none;
   background-color: red;
-  padding: 10px;
+  padding: 20px 100px;
   border-radius: 15px;
+  font-size: 25px;
+}
+
+.link:hover {
+  background-color: transparent;
+}
+
+p {
+  color: white;
+  margin-bottom: 50px;
+  font-size: 25px;
+}
+
+#video {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
 }
