--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,6 @@ h1 {
   font-size: 75px;
 }
 
-.hidden {
-  display: none;
-}
-
 .container {
   position: relative;
 }
@@ -65,4 +61,16 @@ p {
   bottom: 0;
   min-width: 100%;
   min-height: 100%;
+}
+
+.canvas {
+  z-index: 0;
+}
+
+#message {
+  text-align: center;
+}
+
+.hidden {
+  display: none;
 }
