--- a/src/index.css
+++ b/src/index.css
@@ -37,9 +37,9 @@ h1 {
 }
 
 .link {
-  color: white;
+  color: black;
   text-decoration: none;
-  background-color: red;
+  background-color: white;
   padding: 20px 100px;
   border-radius: 15px;
   font-size: 25px;
@@ -47,11 +47,12 @@ h1 {
 
 .link:hover {
   background-color: transparent;
+  color: white;
 }
 
 p {
   color: white;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
   font-size: 25px;
 }
 
@@ -75,6 +76,9 @@ p {
   display: none;
 }
 
-.input {
+.input input {
   margin-bottom: 50px;
+  border: none;
+  border-radius: 25px;
+  padding: 10px;
 }
